--- a/web/style.css
+++ b/web/style.css
@@ -143,4 +143,10 @@
 		 transform: scale(0.85);
 	}
 }
- 
+.info {
+    z-index: 10;
+    height: 15px;
+    position: fixed;
+    color: black;
+    top: calc(100% - 20px);
+}
